crates/keron-lang/tests/corpus/errors/check/secret_concat_with_string.keron
val token: Secret = secret("op://vault/item/field")
val header: String = "Bearer " + token
